K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sailorservice
  labels:
    app: my-app
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
  - port: 80
    targetPort: 3894     # issue matching the 8080 backend port which expose the app to incoming traffic
    protocol: TCP
